Feat: funcionalidad completada - falta testing

--- a/app/modules/profile/templates/profile/summary.html
+++ b/app/modules/profile/templates/profile/summary.html
@@ -19,8 +19,10 @@
                 <p class="card-text h5"><i class="fa fa-user"></i> <strong>Name:</strong> {{user_profile.name}}</p>
                 <p class="card-text h5"><i class="fa fa-user-circle"></i> <strong>Surname:</strong> {{user_profile.surname}}</p>
                 <p class="card-text h5"><i class="fa fa-building"></i> <strong>Affiliation:</strong> {{user_profile.affiliation}}</p>
-                <p class="card-text h5"><i class="fa fa-id-card"></i> <strong>Orcid:</strong> {{user_profile.orcid}}</p>
-                <p class="card-text h5"><i class="fa fa-envelope"></i> <strong>Email:</strong> {{user.email}}</p>
+                {% if user.id == current_user.id %}
+                    <p class="card-text h5"><i class="fa fa-id-card"></i> <strong>Orcid:</strong> {{user_profile.orcid}}</p>
+                    <p class="card-text h5"><i class="fa fa-envelope"></i> <strong>Email:</strong> {{user.email}}</p>
+                {% endif %}
                 <p class="card-text h5"><i class="fa fa-database"></i> <strong>Uploaded datasets:</strong> {{ total_datasets }} datasets</p>
             </div>
             
