--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -96,8 +96,8 @@ chico sundermann">
                         Datasets
                     </li>
 
-                    <li class="sidebar-item {{ 'active' if request.endpoint == 'dataset.create_dataset' else '' }}">
-                        <a class="sidebar-link" href="{{ url_for('dataset.create_dataset') }}">
+                    <li class="sidebar-item {{ 'active' if request.endpoint == 'dataset.upload_dataset_zenodo' else '' }}">
+                        <a class="sidebar-link" href="{{ url_for('dataset.upload_dataset_zenodo') }}">
                             <i class="align-middle" data-feather="upload"></i> <span
                                 class="align-middle">Upload dataset</span>
                         </a>
