--- a/app/modules/admin/templates/admin/dashboard.html
+++ b/app/modules/admin/templates/admin/dashboard.html
@@ -4,7 +4,67 @@
 
 {% block content %}
 
-    <h1>Admin Dashboard</h1>
+<div class="col-xl-9 col-lg-12 col-md-12 col-sm-12">
+
+    <div class="row">
+
+        <div class="col-12">
+
+        <div class="card">
+
+            <div class="card-body">
+
+                <h2> <b>Admin Dashboard</b> </h2>
+
+                <h1 class="h2 mb-3">
+
+                    <h4 class="h4 mb-3" class="stats-color">
+                        <i data-feather="database" class="align-middle mr-2 stats-color"></i>&nbsp;Total datasets: {{ datasets_counter }} datasets
+                    </h4>
+
+                    <h4 class="h4 mb-3" class="stats-color">
+                        <i data-feather="eye" class="align-middle mr-2 stats-color"></i>&nbsp;Total datasets viewed: {{ total_dataset_views }} datasets viewed
+                    </h4>
+
+                    <h4 class="h4 mb-3" class="stats-color">
+                        <i data-feather="download" class="align-middle mr-2 stats-color"></i>&nbsp;Total datasets downloaded: {{ total_dataset_downloads }} datasets downloaded
+                    </h4>
+
+                    <hr>
+
+                    <h4 class="h4 mb-3" class="stats-color">
+                        <i data-feather="file" class="align-middle mr-2 stats-color"></i>&nbsp;Total feature models: {{ feature_models_counter }} feature models
+                    </h4>
+
+                    <h4 class="h4 mb-3" class="stats-color">
+                        <i data-feather="eye" class="align-middle mr-2 stats-color"></i>&nbsp;Total feature models viewed: {{ total_feature_model_views }} feature models viewed
+                    </h4>
+
+                    <h4 class="h4" class="stats-color">
+                        <i data-feather="download" class="align-middle mr-2 stats-color"></i>&nbsp;Total feature models downloaded: {{ total_feature_model_downloads }} feature models downloaded
+                    </h4>
+
+                    <hr>
+
+                    <h4 class="h4 mb-3" class="stats-color">
+                        <i data-feather="users" class="align-middle mr-2 stats-color"></i>&nbsp;Total users: {{ users_counter }} users
+                    </h4>
+
+                    <h4 class="h4 mb-3" class="stats-color">
+                        <i data-feather="users" class="align-middle mr-2 stats-color"></i>&nbsp;Total admin users: {{ admin_user_counter }} administrators
+                    </h4>
+
+                </h1>
+
+                </h2>
+
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
 
 {% endblock %}
 
