--- a/app/modules/admin/templates/admin/dashboard.html
+++ b/app/modules/admin/templates/admin/dashboard.html
@@ -29,6 +29,10 @@
                     <h4 class="h4 mb-3" class="stats-color">
                         <i data-feather="download" class="align-middle mr-2 stats-color"></i>&nbsp;Total datasets downloaded: {{ total_dataset_downloads }} datasets downloaded
                     </h4>
+                    
+                    <h4 class="h4 mb-3" class="stats-color">
+                        <i data-feather="download" class="align-middle mr-2 stats-color"></i>&nbsp;Most downloaded dataset : {{ max_downloads_dataset }} ({{  max_downloads }} downloads)
+                    </h4>
 
                     <hr>
 
