--- a/app/modules/auth/templates/auth/login_form.html
+++ b/app/modules/auth/templates/auth/login_form.html
@@ -26,7 +26,6 @@
 
                     </div>
 
-
                     <div class="row">
 
                         <div class="col-md-6 col-lg-6 col-xs-12">
@@ -87,6 +86,14 @@
     </div>
 </div>
 
+<!-- Botón de "Recuperar contraseña" -->
+<div class="row">
+    <div class="mt-3">
+        <div class="col-lg-6 col-12">
+            <a href="{{ url_for('auth.forgot_password') }}">Forgot your password?</a>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
 
