feat: acceso al dashboard
Se ha añadido un método de acceso al dashboard mediante el desplegable de usuario. Se ha reforzado la seguridad del dashboard y se ha añadido una nueva estadística.

--- a/app/modules/admin/templates/admin/dashboard.html
+++ b/app/modules/admin/templates/admin/dashboard.html
@@ -58,6 +58,10 @@
                         <i data-feather="users" class="align-middle mr-2 stats-color"></i>&nbsp;Total admin users: {{ admin_user_counter }} administrators
                     </h4>
 
+                    <h4 class="h4 mb-3" class="stats-color">
+                        <i data-feather="download" class="align-middle mr-2 stats-color"></i>&nbsp;User with the most downloads: {{ user_downloads }} ({{  number_downloads_user }} downloads)
+                    </h4>
+
                 </h1>
 
                 </h2>
