--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -180,6 +180,10 @@ chico sundermann">
                         <div class="dropdown-menu dropdown-menu-end">
                             <a class="dropdown-item" href="{{ url_for('profile.my_profile') }}">
                                 <i class="align-middle me-1" data-feather="user"></i> My profile</a>
+                            {% if current_user.is_admin %}
+                                <a class="dropdown-item" href="{{ url_for('admin.dashboard') }}">
+                                    <i class="align-middle me-1" data-feather="user"></i> Admin Dashboard</a>
+                            {% endif %}
                             <a class="dropdown-item" href="{{ url_for('auth.logout') }}">
                                 <i class="align-middle me-1" data-feather="log-out"></i> Log out</a>
                         </div>
