Feat: validate email exists

--- a/app/modules/auth/templates/auth/forgot_password.html
+++ b/app/modules/auth/templates/auth/forgot_password.html
@@ -6,6 +6,20 @@
         <div>
             {{ form.email.label }} {{ form.email() }}
         </div>
+        
+        <!-- Mensajes de error o éxito -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <ul>
+                    {% for category, message in messages %}
+                        <li style="color: {{ 'red' if category == 'error' else 'green' }}; font-weight: bold;">
+                            {{ message }}
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+        
         <div>
             {{ form.submit() }}
         </div>
