--- a/app/modules/community/templates/community/index.html
+++ b/app/modules/community/templates/community/index.html
@@ -6,6 +6,8 @@
 
     <h1 class="h3 mb-3"><b>Communities</b></h1>
 
+    <a href="{{ url_for('community.create') }}" class="btn btn-primary mb-4">Create Community</a>
+
     <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 row-cols-12 g-4">
         {% for community in communities %}
         <div class="col">
