--- a/app/modules/auth/templates/auth/login_form.html
+++ b/app/modules/auth/templates/auth/login_form.html
@@ -90,7 +90,7 @@
 <div class="row">
     <div class="mt-3">
         <div class="col-lg-6 col-12">
-            <a href="{{ url_for('auth.forgot_password') }}">Forgot your password?</a>
+            <a href="{{ url_for('auth.forgot_password') }}">Do you forgot your password?</a>
         </div>
     </div>
 </div>
