Feat: top 5 datasets with most views

--- a/app/modules/admin/templates/admin/dashboard.html
+++ b/app/modules/admin/templates/admin/dashboard.html
@@ -127,6 +127,10 @@
 </div>
 
 </div>
+<div class="card-body" style="margin-block: 10px;">
+    <img src="data:image/png;base64,{{ plot_datasets_views }}" alt="Top 5 Datasets con más Visualizaciones" style="width: 50%; height: auto;">
+</div>
+
 
 
 {% endblock %}
