Feat: top 5 datasets with most views

--- a/app/modules/admin/templates/admin/dashboard.html
+++ b/app/modules/admin/templates/admin/dashboard.html
@@ -94,6 +94,10 @@
 <div class="card-body" style="margin-block: 10px;">
     <img src="data:image/png;base64,{{ plot_features_downloads }}" alt="Top 5 Feature Models con Más Descargas" style="width: 50%; height: auto;">
 </div>
+<div class="card-body" style="margin-block: 10px;">
+    <img src="data:image/png;base64,{{ plot_datasets_views }}" alt="Top 5 Datasets con más Visualizaciones" style="width: 50%; height: auto;">
+</div>
+
 
 {% endblock %}
 
