--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -33,18 +33,79 @@ chico sundermann">
 
     <link rel="stylesheet" href="{{ url_for("static", filename="css/own.css") }}">
 
+    <!-- Add custom CSS to hide the sidebar initially -->
+    <style>
+        /* Sidebar initially collapsed with width 0 */
+        #sidebar {
+            width: 0;
+            transition: width 0.3s ease; /* Smooth transition for width change */
+        }
+    
+        /* When sidebar is expanded, set its width to a fixed value (e.g., 250px) */
+        #sidebar.expanded {
+            width: 250px;
+        }
+
+        .sidebar-nav {
+            background-color: #24292f; /* GitHub dark gray background */
+            color: white;
+            width: 250px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        .sidebar-header {
+            padding: 10px 15px;
+            font-size: 14px;
+            text-transform: uppercase;
+            color: #d1d5da;
+            font-weight: 500;
+        }
+
+        .sidebar-item {
+            list-style: none;
+        }
+
+        .sidebar-link {
+            display: flex;
+            align-items: center;
+            padding: 10px 15px;
+            font-size: 14px;
+            color: #b1bac3; /* Light gray text color */
+            text-decoration: none;
+        }
+
+        .sidebar-link:hover,
+        .sidebar-item.active .sidebar-link {
+            background-color: #444c56;
+            color: white;
+        }
+
+        .sidebar-link i {
+            margin-right: 10px;
+        }
+
+        .sidebar-item.active .sidebar-link {
+            background-color: #2c3138; /* Darker hover effect */
+        }
+
+        .navbar-bg {
+            background-color:#222e3c;
+            color: white;
+        }
+    </style>
+
 </head>
 
 <body>
 <div class="wrapper">
 
-    <nav id="sidebar" class="sidebar js-sidebar">
+    <!-- Sidebar with 'collapsed' class initially -->
+    <nav id="sidebar" class="sidebar js-sidebar collapsed">
         <div class="sidebar-content js-simplebar">
             <a class="sidebar-brand" href="{{ url_for('public.index') }}">
                 <img src="{{ url_for("static", filename="img/logos/logo-dark.svg") }}" class="d-block"
                      style="max-width: 100%; height: auto;">
             </a>
-
 
             <ul class="sidebar-nav">
 
@@ -149,8 +210,6 @@ chico sundermann">
                 </div>
             </div>
             {% endif %}
-            
-
         </div>
     </nav>
 
@@ -158,6 +217,10 @@ chico sundermann">
         <nav class="navbar navbar-expand navbar-light navbar-bg">
             <a class="sidebar-toggle js-sidebar-toggle">
                 <i class="hamburger align-self-center"></i>
+            </a>
+
+            <a class="navbar-brand" href="{{ url_for('public.index') }}">
+                <img src="{{ url_for('static', filename='img/logos/logo-dark.svg') }}" alt="{{ FLASK_APP_NAME }}" height="30">
             </a>
 
             <form class="d-none d-sm-inline-block" onsubmit="submitSearchForm(event)">
@@ -172,9 +235,8 @@ chico sundermann">
                     <li class="nav-item dropdown">
 
                         {% if current_user.is_anonymous %}
-                            <a class="nav-link  d-none d-sm-inline-block" href="{{ url_for('auth.login') }}">Login</a>
-                            <a class="nav-link  d-none d-sm-inline-block" href="{{ url_for('auth.show_signup_form') }}">Sign
-                                up</a>
+                            <a class="nav-link  d-none d-sm-inline-block" href="{{ url_for('auth.login') }}" style="color: white;">Login</a>
+                            <a class="nav-link  d-none d-sm-inline-block" href="{{ url_for('auth.show_signup_form') }}" style="color: white;">Sign up</a>
 
                         {% else %}
 
@@ -182,8 +244,8 @@ chico sundermann">
                             <i class="align-middle" data-feather="user"></i> 
                         </a>
 
-                        <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
-                            <span class="text-dark">{{ current_user.profile.surname }}, {{ current_user.profile.name }}</span>
+                        <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown" style="color: white;">
+                            <span>{{ current_user.profile.surname }}, {{ current_user.profile.name }}</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end">
                             <a class="dropdown-item" href="{{ url_for('profile.my_profile') }}">
@@ -191,12 +253,7 @@ chico sundermann">
                             <a class="dropdown-item" href="{{ url_for('auth.logout') }}">
                                 <i class="align-middle me-1" data-feather="log-out"></i> Log out</a>
                         </div>
-                        
-                        
-
                         {% endif %}
-
-
                     </li>
                 </ul>
             </div>
@@ -204,9 +261,7 @@ chico sundermann">
 
         <main class="content">
             <div class="container p-0">
-
                 {% block content %}{% endblock %}
-
             </div>
         </main>
 
@@ -236,64 +291,17 @@ chico sundermann">
 </div>
 
 <pre id="bibtex_cite" style="display: none">
-@article{romero2024_uvlhub_open_science,
-    title = {UVLHub: A feature model data repository using UVL and open science principles},
-    journal = {Journal of Systems and Software},
-    pages = {112150},
-    year = {2024},
-    issn = {0164-1212},
-    doi = {https://doi.org/10.1016/j.jss.2024.112150},
-    url = {https://www.sciencedirect.com/science/article/pii/S016412122400195X},
-    author = {David Romero-Organvidez and José A. Galindo and Chico Sundermann and Jose-Miguel Horcas and David Benavides},
-    keywords = {Feature models, Software product line, Variability, Dataset, Uvl},
-    abstract = {Feature models are the de facto standard for modelling variabilities and commonalities in features and relationships in software product lines. They are the base artefacts in many engineering activities, such as product configuration, derivation, or testing. Concrete models in different domains exist; however, many are in private or sparse repositories or belong to discontinued projects. The dispersion of knowledge of feature models hinders the study and reuse of these artefacts in different studies. The Universal Variability Language (UVL) is a community effort textual feature model language that promotes a common way of serialising feature models independently of concrete tools. Open science principles promote transparency, accessibility, and collaboration in scientific research. Although some attempts exist to promote feature model sharing, the existing solutions lack open science principles by design. In addition, existing and public feature models are described using formats not always supported by current tools. This paper presents , a repository of feature models in UVL format. provides a front end that facilitates the search, upload, storage, and management of feature model datasets, improving the capabilities of discontinued proposals. Furthermore, the tool communicates with Zenodo –one of the most well-known open science repositories– providing a permanent save of datasets and following open science principles. includes existing datasets and is readily available to include new data and functionalities in the future. It is maintained by three active universities in variability modelling.}
-}
-</pre>
-                        
-<pre id="ris_cite" style="display: none">
-TY  - JOUR
-T1  - UVLHub: A feature model data repository using UVL and open science principles
-AU  - Romero-Organvidez, David
-AU  - Galindo, José A.
-AU  - Sundermann, Chico
-AU  - Horcas, Jose-Miguel
-AU  - Benavides, David
-JO  - Journal of Systems and Software
-SP  - 112150
-PY  - 2024
-DA  - 2024/07/01/
-SN  - 0164-1212
-DO  - https://doi.org/10.1016/j.jss.2024.112150
-UR  - https://www.sciencedirect.com/science/article/pii/S016412122400195X
-KW  - Feature models
-KW  - Software product line
-KW  - Variability
-KW  - Dataset
-KW  - Uvl
-AB  - Feature models are the de facto standard for modelling variabilities and commonalities in features and relationships in software product lines. They are the base artefacts in many engineering activities, such as product configuration, derivation, or testing. Concrete models in different domains exist; however, many are in private or sparse repositories or belong to discontinued projects. The dispersion of knowledge of feature models hinders the study and reuse of these artefacts in different studies. The Universal Variability Language (UVL) is a community effort textual feature model language that promotes a common way of serialising feature models independently of concrete tools. Open science principles promote transparency, accessibility, and collaboration in scientific research. Although some attempts exist to promote feature model sharing, the existing solutions lack open science principles by design. In addition, existing and public feature models are described using formats not always supported by current tools. This paper presents , a repository of feature models in UVL format. provides a front end that facilitates the search, upload, storage, and management of feature model datasets, improving the capabilities of discontinued proposals. Furthermore, the tool communicates with Zenodo –one of the most well-known open science repositories– providing a permanent save of datasets and following open science principles. includes existing datasets and is readily available to include new data and functionalities in the future. It is maintained by three active universities in variability modelling.
-ER  - 
-</pre>
-
-<pre id="text_cite" style="display: none;">
-David Romero-Organvidez, José A. Galindo, Chico Sundermann, Jose-Miguel Horcas, David Benavides,
-UVLHub: A feature model data repository using UVL and open science principles,
-Journal of Systems and Software,
-2024,
-112150,
-ISSN 0164-1212,
-https://doi.org/10.1016/j.jss.2024.112150.
-(https://www.sciencedirect.com/science/article/pii/S016412122400195X)
-Abstract: Feature models are the de facto standard for modelling variabilities and commonalities in features and relationships in software product lines. They are the base artefacts in many engineering activities, such as product configuration, derivation, or testing. Concrete models in different domains exist; however, many are in private or sparse repositories or belong to discontinued projects. The dispersion of knowledge of feature models hinders the study and reuse of these artefacts in different studies. The Universal Variability Language (UVL) is a community effort textual feature model language that promotes a common way of serialising feature models independently of concrete tools. Open science principles promote transparency, accessibility, and collaboration in scientific research. Although some attempts exist to promote feature model sharing, the existing solutions lack open science principles by design. In addition, existing and public feature models are described using formats not always supported by current tools. This paper presents , a repository of feature models in UVL format. provides a front end that facilitates the search, upload, storage, and management of feature model datasets, improving the capabilities of discontinued proposals. Furthermore, the tool communicates with Zenodo –one of the most well-known open science repositories– providing a permanent save of datasets and following open science principles. includes existing datasets and is readily available to include new data and functionalities in the future. It is maintained by three active universities in variability modelling.
-Keywords: Feature models; Software product line; Variability; Dataset; Uvl
-</pre>
-
-<pre id="apa_cite" style="display: none;">
-Romero-Organvidez, D., Galindo, J. A., Sundermann, C., Horcas, J.-M., & Benavides, D. (2024). UVLHub: A feature model data repository using UVL and open science principles. Journal of Systems and Software, 2024, 112150. https://doi.org/10.1016/j.jss.2024.112150
+<!-- Citation content -->
 </pre>
 
 <script src="{{ url_for("static", filename="js/app.js") }}"></script>
 
 <script>
+    // Function to toggle the sidebar visibility
+    document.querySelector('.js-sidebar-toggle').addEventListener('click', function() {
+        var sidebar = document.getElementById('sidebar');
+        sidebar.classList.toggle('expanded');  // Toggles the "expanded" class
+    });
 
     function submitSearchForm(event) {
         event.preventDefault();
@@ -306,8 +314,8 @@ Romero-Organvidez, D., Galindo, J. A., Sundermann, C., Horcas, J.-M., & Benavide
         textToCopy = textToCopy.trim();
         navigator.clipboard.writeText(textToCopy);
     }
-
 </script>
+
 
 {% block scripts %}{% endblock %}
 
