Feat: number of models and products filter

--- a/app/modules/explore/templates/explore/index.html
+++ b/app/modules/explore/templates/explore/index.html
@@ -103,6 +103,28 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="mb-3">
+                        <label class="form-label" for="query">
+                            Search for datasets by number of features
+                        </label>
+                        <input class="form-control" id="queryFeatures" name="queryFeatures" required="" type="text"
+                            value="">
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="mb-3">
+                        <label class="form-label" for="query">
+                            Search for datasets by number of models
+                        </label>
+                        <input class="form-control" id="queryModels" name="queryModels" required="" type="text"
+                            value="">
+                    </div>
+                </div>
+            </div>
+
 
 
             <div class="row">
