--- a/app/modules/community/templates/community/show.html
+++ b/app/modules/community/templates/community/show.html
@@ -30,7 +30,7 @@
     <a href="{{ url_for('community.index') }}" class="btn btn-primary">Back to Communities</a>
 
     {% if community.created_by_id == current_user.id %}
-    <form action="{{ url_for('community.delete_community', id=community.id) }}" method="POST" style="display:inline;">
+    <form action="{{ url_for('community.delete_community', community_id=community.id) }}" method="POST" style="display:inline;">
         <button type="submit" class="btn btn-danger">Delete Community</button>
     </form>
     {% endif %}
