--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -78,8 +78,9 @@ chico sundermann">
                         <i class="align-middle" data-feather="layers"></i> <span class="align-middle">Communities</span>
                     </a>
                 </li>
-                <li class="sidebar-item {{ 'active' if request.endpoint == 'community.index' else '' }}">
-                    <a class="sidebar-link" href="{{ url_for('community.index') }}">
+
+                <li class="sidebar-item {{ 'active' if request.endpoint == 'community.index_my_communities' else '' }}">
+                    <a class="sidebar-link" href="{{ url_for('community.index_my_communities') }}">
                         <i class="align-middle" data-feather="list"></i> <span class="align-middle">My Communities</span>
                     </a>
                 </li>
