--- a/app/modules/community/templates/community/index_my_communities.html
+++ b/app/modules/community/templates/community/index_my_communities.html
@@ -12,7 +12,7 @@
         {% for community in communities %}
         <div class="col">
             <!-- Envolver todo el div con un enlace para hacerlo clicable -->
-            <a href="{{ url_for('community.show_community', id=community.id) }}" class="text-decoration-none">
+            <a href="{{ url_for('community.show_community', community_id=community.id) }}" class="text-decoration-none">
                 <div class="card h-100">
                     <!-- Renderiza el logo dinámico o el predeterminado -->
                     <img src="{{ url_for('static', filename=community.logo) }}" 
