--- a/app/modules/dataset/templates/dataset/upload_dataset.html
+++ b/app/modules/dataset/templates/dataset/upload_dataset.html
@@ -676,6 +676,9 @@
                 <button id="upload_button" class="btn btn-primary mt-2" disabled>
                     <i data-feather="upload" class="center-button-icon"></i>
                     Upload dataset</button>
+                <button id="upload_fakenodo_button" class="btn btn-primary mt-2">
+                    <i data-feather="upload" class="center-button-icon"></i>
+                    Upload dataset fakenodo</button>
 
                 <div id="loading" style="display: none">
                     <img width="40px" src="{{ url_for("static", filename="gifs/loading.svg") }}"/>
